# naturascreen

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: b4b98a667a5d_initial_schema.py  e313704c113e_initial_schema.py
api/naturascreen/: __init__.py  config.py  db.py  disclaimer.py  main.py  models.py  schemas.py  security.py
api/naturascreen/routers/: __init__.py  compounds.py  experiments.py  feedback.py  neoantigens.py  stream.py  targets.py
api/naturascreen/services/: __init__.py  pipeline.py  subscores.py
api/naturascreen/services/compounds/: __init__.py  coconut.py  descriptors.py  draw.py  ingest.py  service.py
api/naturascreen/services/docking/: __init__.py  adapter.py  curate_targets.py  prep.py  targets_registry.py
api/naturascreen/services/neoantigen/: __init__.py  adapter.py  peptides.py  predictor.py  service.py
api/naturascreen/services/report/: __init__.py  report.py
api/naturascreen/services/response/: __init__.py  (+6 more)
api/naturascreen/tasks/: __init__.py  celery_app.py  pipeline.py  retrain.py
api/tests/: test_coconut_client.py  test_compounds_db.py
api/tests/core/: test_applicability.py  test_coconut_parse.py  test_disclaimer.py  test_docking.py  test_peptides.py  test_scoring.py  test_simulation.py
api/tests/integration/: conftest.py  test_api.py  test_descriptors.py  test_docking_curate.py  test_neoantigen.py  test_pipeline.py  test_report.py  test_response_model.py  test_retrain.py  test_security.py  test_streamer.py
(+46 files in other folders)
